--- a/src/gui/view/ViewLogin.fxml
+++ b/src/gui/view/ViewLogin.fxml
@@ -4,20 +4,44 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="251.0" prefWidth="369.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewLoginController">
+<AnchorPane prefHeight="245.0" prefWidth="335.0" style="-fx-background-color: #3D4857;" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8.0.171" fx:controller="gui.controllers.ViewLoginController">
    <children>
-      <Label layoutX="91.0" layoutY="29.0" prefHeight="45.0" prefWidth="187.0" text="Tela de login">
+      <Label layoutX="74.0" layoutY="24.0" prefHeight="45.0" prefWidth="187.0" text="Tela de login" textFill="WHITE">
          <font>
-            <Font size="29.0" />
+            <Font name="System Bold" size="29.0" />
          </font>
       </Label>
-      <Label layoutX="59.0" layoutY="100.0" text="Usuario:" />
-      <Label layoutX="59.0" layoutY="154.0" text="Senha:" />
-      <TextField fx:id="tfUsuario" layoutX="130.0" layoutY="95.0" />
-      <PasswordField fx:id="pfSenha" layoutX="130.0" layoutY="149.0" />
-      <Button fx:id="btLogin" layoutX="239.0" layoutY="197.0" mnemonicParsing="false" onAction="#onBtLoginAction" text="Login" />
+      <Label layoutX="50.0" layoutY="94.0" text="Usuario:" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font></Label>
+      <TextField fx:id="tfUsuario" layoutX="130.0" layoutY="95.0" promptText="Nome de usuário" />
+      <PasswordField fx:id="pfSenha" layoutX="130.0" layoutY="149.0" promptText="Senha do usuário" />
+      <Button fx:id="btLogin" layoutX="239.0" layoutY="197.0" mnemonicParsing="false" onAction="#onBtLoginAction" style="-fx-background-image: icons8_login_64px.png;" text="Login" />
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="25.0" layoutY="95.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../model/images/icons8_user_male_52px.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="25.0" fitWidth="27.0" layoutX="289.0" layoutY="150.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../model/images/icons8_eye_48px.png" />
+         </image>
+      </ImageView>
+      <ImageView fitHeight="25.0" fitWidth="25.0" layoutX="37.0" layoutY="148.0" pickOnBounds="true" preserveRatio="true">
+         <image>
+            <Image url="@../../model/images/icons8_password_60px_1.png" />
+         </image>
+      </ImageView>
+      <Label layoutX="63.0" layoutY="148.0" text="Senha:" textFill="WHITE">
+         <font>
+            <Font name="System Bold" size="18.0" />
+         </font>
+      </Label>
    </children>
 </AnchorPane>
