--- a/src/gui/view/ViewFuncionario.fxml
+++ b/src/gui/view/ViewFuncionario.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -53,5 +54,18 @@
       </GridPane>
       <Label layoutX="117.0" layoutY="549.0" text="e aperte o botão abaixo para deleta-los!" />
       <Button fx:id="btExcluiFuncionario" layoutX="217.0" layoutY="569.0" mnemonicParsing="false" onAction="#excluirFuncionario" text="Excluir" />
+      <GridPane layoutX="371.0" layoutY="538.0" prefHeight="61.0" prefWidth="118.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <ProgressIndicator fx:id="piStatus" prefHeight="26.0" prefWidth="36.0" visible="false" />
+            <Label fx:id="labelStatus" alignment="CENTER" contentDisplay="CENTER" prefHeight="17.0" prefWidth="134.0" text="Label" textAlignment="CENTER" visible="false" GridPane.rowIndex="1" />
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
