--- a/bin/gui/view/ViewAtualizaCliente.fxml
+++ b/bin/gui/view/ViewAtualizaCliente.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -54,5 +55,7 @@
             <Label prefHeight="21.0" prefWidth="85.0" text="Rede Social:" GridPane.rowIndex="4" />
          </children>
       </GridPane>
+      <ProgressIndicator fx:id="piStatus" layoutX="678.0" layoutY="5.0" prefHeight="21.0" prefWidth="23.0" visible="false" />
+      <Label fx:id="labelStatus" layoutX="564.0" layoutY="8.0" prefHeight="17.0" prefWidth="105.0" text="Atualizando cliente" visible="false" />
    </children>
 </AnchorPane>
