--- a/src/gui/view/ViewAtualizaFuncionario.fxml
+++ b/src/gui/view/ViewAtualizaFuncionario.fxml
@@ -2,6 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
@@ -29,7 +30,7 @@
       </TableView>
       <Line endX="-199.0" endY="145.2928924560547" layoutX="199.0" layoutY="-109.0" startX="155.0" startY="146.0" stroke="#827f7f" />
       <Button fx:id="btVoltar" layoutX="5.0" layoutY="5.0" mnemonicParsing="false" onAction="#voltaScene" prefHeight="16.0" prefWidth="62.0" text="Voltar" />
-      <GridPane layoutX="398.0" layoutY="102.0" prefHeight="121.0" prefWidth="244.0">
+      <GridPane layoutX="398.0" layoutY="102.0" prefHeight="121.0" prefWidth="244.0" vgap="20.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="134.0" minWidth="10.0" prefWidth="55.0" />
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="235.0" minWidth="10.0" prefWidth="173.0" />
@@ -50,5 +51,7 @@
             <Label text="Telefone:" GridPane.rowIndex="2" />
          </children>
       </GridPane>
+      <Label fx:id="labelStatus" layoutX="510.0" layoutY="294.0" text="Atualizando funcionário!" visible="false" />
+      <ProgressIndicator fx:id="piStatus" layoutX="648.0" layoutY="286.0" prefHeight="31.0" prefWidth="36.0" visible="false" />
    </children>
 </AnchorPane>
