--- a/src/gui/view/ViewPacote.fxml
+++ b/src/gui/view/ViewPacote.fxml
@@ -14,7 +14,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewPacoteController">
    <children>
       <TabPane prefHeight="400.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
@@ -33,7 +33,6 @@
                               <TableColumn fx:id="ColunaValorPe" prefWidth="74.0" text="Valor Pé" />
                            </columns>
                         </TableView>
-                        <Button fx:id="btAddPacote" layoutX="345.0" layoutY="326.0" mnemonicParsing="false" text="Adicionar" />
                         <Label layoutX="25.0" layoutY="225.0" text="Pacote:" />
                         <Label layoutX="33.0" layoutY="259.0" text="Valor:" />
                         <Label layoutX="169.0" layoutY="330.0" text="Quantidade Mão:" />
@@ -43,14 +42,15 @@
                         <TextField fx:id="tfNome" layoutX="74.0" layoutY="221.0" />
                         <TextField fx:id="tfValor" layoutX="74.0" layoutY="256.0" prefHeight="25.0" prefWidth="74.0" />
                         <TextField fx:id="tfValorMao" layoutX="74.0" layoutY="291.0" prefHeight="25.0" prefWidth="74.0" />
-                        <TextField fx:id="tfQuantMao" layoutX="272.0" layoutY="326.0" prefHeight="25.0" prefWidth="49.0" />
-                        <TextField fx:id="tfQuantPe" layoutX="273.0" layoutY="291.0" prefHeight="25.0" prefWidth="48.0" />
                         <TextField fx:id="tfValorPe" layoutX="74.0" layoutY="326.0" prefHeight="25.0" prefWidth="74.0" />
+                        <TextField fx:id="tfQuantPe" layoutX="273.0" layoutY="291.0" prefHeight="25.0" prefWidth="48.0" />
+                        <TextField fx:id="tfQuantMao" layoutX="272.0" layoutY="326.0" prefHeight="25.0" prefWidth="49.0" />
+                        <Button fx:id="btAddPacote" layoutX="345.0" layoutY="326.0" mnemonicParsing="false" onAction="#onBtCriaPacoteAction" text="Adicionar" />
                      </children>
                   </AnchorPane>
               </content>
             </Tab>
-          <Tab text="Clientes c/ pacotes">
+            <Tab text="Clientes c/ pacotes">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
@@ -83,7 +83,7 @@
                      </children>
                   </AnchorPane>
             </content>
-          </Tab>
+            </Tab>
         </tabs>
       </TabPane>
    </children>
