--- a/src/gui/view/ViewPacote.fxml
+++ b/src/gui/view/ViewPacote.fxml
@@ -14,78 +14,117 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
-<?import javafx.scene.shape.Line?>
+<?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="520.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewPacoteController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="504.0" prefWidth="683.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewPacoteController">
    <children>
-      <TabPane prefHeight="520.0" prefWidth="600.0" tabClosingPolicy="UNAVAILABLE">
+      <TabPane prefHeight="504.0" prefWidth="683.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
             <Tab text="Pacotes">
               <content>
-                <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="496.0" prefWidth="600.0">
+                <AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="0.0" minWidth="0.0" prefHeight="475.0" prefWidth="683.0">
                      <children>
-                        <TableView fx:id="tvPacotes" layoutX="10.0" layoutY="11.0" prefHeight="250.0" prefWidth="581.0">
+                        <TableView fx:id="tvPacotes" layoutX="10.0" layoutY="11.0" onMouseClicked="#selecionaPacote" prefHeight="250.0" prefWidth="663.0">
                            <columns>
                               <TableColumn fx:id="colunaId" prefWidth="48.0" text="ID" />
                               <TableColumn fx:id="colunaPacote" prefWidth="101.0" text="Pacote" />
                               <TableColumn fx:id="colunaValor" prefWidth="57.0" text="Valor" />
+                              <TableColumn fx:id="colunaValorPe" prefWidth="74.0" text="Valor Pé" />
+                              <TableColumn fx:id="colunaValorMao" prefWidth="94.0" text="Valor Mão" />
                               <TableColumn fx:id="colunaQuantMao" prefWidth="107.0" text="Quantidade Mão" />
                               <TableColumn fx:id="colunaQuantPe" prefWidth="99.0" text="Quantidade Pé" />
-                              <TableColumn fx:id="ColunaValorMao" prefWidth="94.0" text="Valor Mão" />
-                              <TableColumn fx:id="ColunaValorPe" prefWidth="74.0" text="Valor Pé" />
+                              <TableColumn fx:id="colunaExcluirPacote" prefWidth="82.0" text="Excluir?" />
                            </columns>
                         </TableView>
-                        <Button fx:id="btAddPacote" layoutX="198.0" layoutY="451.0" mnemonicParsing="false" onAction="#onBtCriaPacoteAction" text="Adicionar">
-                           <graphic>
-                              <ImageView fitHeight="22.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
-                                 <image>
-                                    <Image url="@../../model/images/icons8_add_96px_1.png" />
-                                 </image>
-                              </ImageView>
-                           </graphic>
-                        </Button>
-                        <GridPane layoutX="14.0" layoutY="276.0" prefHeight="179.0" prefWidth="101.0">
-                          <columnConstraints>
-                            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="200.0" minWidth="0.0" prefWidth="98.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints maxHeight="-Infinity" minHeight="10.0" prefHeight="30.0" vgrow="NEVER" />
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                              <Label text="Pacote:" GridPane.halignment="RIGHT" />
-                              <Label text="Valor:" GridPane.rowIndex="1" />
-                              <Label text="Valor Mão:" GridPane.rowIndex="2" />
-                              <Label text="Valor Pé:" GridPane.rowIndex="3" />
-                              <Label text="Quantidade Pé:" GridPane.rowIndex="4" />
-                              <Label text="Quantidade Mão:" GridPane.rowIndex="5" />
-                           </children>
-                        </GridPane>
-                        <TextField fx:id="tfNome" layoutX="128.0" layoutY="280.0" minHeight="0.0" minWidth="0.0" prefHeight="26.0" prefWidth="133.0" />
-                        <TextField fx:id="tfValor" layoutX="129.0" layoutY="310.0" prefHeight="25.0" prefWidth="74.0" />
-                        <TextField fx:id="tfValorMao" layoutX="129.0" layoutY="339.0" prefHeight="25.0" prefWidth="74.0" />
-                        <TextField fx:id="tfValorPe" layoutX="130.0" layoutY="370.0" prefHeight="25.0" prefWidth="74.0" />
-                        <TextField fx:id="tfQuantPe" layoutX="131.0" layoutY="399.0" prefHeight="25.0" prefWidth="48.0" />
-                        <TextField fx:id="tfQuantMao" layoutX="131.0" layoutY="430.0" prefHeight="25.0" prefWidth="47.0" />
-                        <Line endX="100.0" endY="195.0" layoutX="200.0" layoutY="296.0" startX="100.5" startY="-35.0" />
-                        <GridPane alignment="CENTER_RIGHT" layoutX="391.0" layoutY="451.0">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="157.0" minWidth="10.0" prefWidth="149.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="51.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                              <ProgressIndicator fx:id="piStatus" prefHeight="35.0" prefWidth="38.0" visible="false" GridPane.columnIndex="1" />
-                              <Label fx:id="labelStatus" alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="149.0" text="Criando projeto!" textAlignment="RIGHT" visible="false" />
-                           </children>
-                        </GridPane>
+                        <TabPane layoutY="270.0" prefHeight="207.0" prefWidth="683.0" tabClosingPolicy="UNAVAILABLE">
+                          <tabs>
+                            <Tab text="Criar/Excluir">
+                              <content>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="172.0" prefWidth="602.0">
+                                       <children>
+                                          <Pane layoutX="10.0" layoutY="10.0" prefHeight="156.0" prefWidth="465.0" style="-fx-border-color: #cccccc;">
+                                             <children>
+                                                <VBox layoutX="2.0" layoutY="16.0" prefHeight="103.0" prefWidth="62.0" spacing="18.0">
+                                                   <children>
+                                                      <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="64.0" text="Pacote:" />
+                                                      <Label alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="71.0" text="Valor:" />
+                                                      <Label alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="66.0" text="Valor Pé:" />
+                                                      <Label alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="75.0" text="Valor Mão:" />
+                                                   </children>
+                                                </VBox>
+                                                <TextField fx:id="tfNome" layoutX="75.0" layoutY="13.0" minHeight="0.0" minWidth="0.0" prefHeight="26.0" prefWidth="133.0" />
+                                                <TextField fx:id="tfValorMao" layoutX="75.0" layoutY="118.0" prefHeight="25.0" prefWidth="74.0" />
+                                                <TextField fx:id="tfValor" layoutX="75.0" layoutY="49.0" prefHeight="25.0" prefWidth="74.0" />
+                                                <TextField fx:id="tfValorPe" layoutX="75.0" layoutY="83.0" prefHeight="25.0" prefWidth="74.0" />
+                                                <TextField fx:id="tfQuantMao" layoutX="337.0" layoutY="14.0" prefHeight="25.0" prefWidth="48.0" />
+                                                <TextField fx:id="tfQuantPe" layoutX="337.0" layoutY="49.0" prefHeight="25.0" prefWidth="47.0" />
+                                                <Label layoutX="239.0" layoutY="53.0" text="Quantidade Pé:" />
+                                                <Label layoutX="227.0" layoutY="18.0" text="Quantidade Mão:" />
+                                                <Button fx:id="btExcluiPacote" layoutX="378.0" layoutY="115.0" mnemonicParsing="false" onAction="#onBtExcluiPacoteAction" text="Excluir">
+                                                   <graphic>
+                                                      <ImageView fitHeight="22.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
+                                                         <image>
+                                                            <Image url="@../../model/images/icons8_trash_48px.png" />
+                                                         </image>
+                                                      </ImageView>
+                                                   </graphic>
+                                                </Button>
+                                                <Button fx:id="btAddPacote" layoutX="276.0" layoutY="115.0" mnemonicParsing="false" onAction="#onBtCriaPacoteAction" text="Adicionar">
+                                                   <graphic>
+                                                      <ImageView fitHeight="22.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
+                                                         <image>
+                                                            <Image url="@../../model/images/icons8_add_96px_1.png" />
+                                                         </image>
+                                                      </ImageView>
+                                                   </graphic>
+                                                </Button>
+                                             </children>
+                                          </Pane>
+                                       </children></AnchorPane>
+                              </content>
+                            </Tab>
+                            <Tab text="Atualizar">
+                              <content>
+                                <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
+                                       <children>
+                                          <Pane layoutX="10.0" layoutY="10.0" prefHeight="156.0" prefWidth="399.0" style="-fx-border-color: #cccccc;">
+                                             <children>
+                                                <VBox layoutX="2.0" layoutY="16.0" prefHeight="103.0" prefWidth="62.0" spacing="18.0">
+                                                   <children>
+                                                      <Label alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="64.0" text="Pacote:" />
+                                                      <Label alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="71.0" text="Valor:" />
+                                                      <Label alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="66.0" text="Valor Pé:" />
+                                                      <Label alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="75.0" text="Valor Mão:" />
+                                                   </children>
+                                                </VBox>
+                                                <TextField fx:id="tfNomeAtualizado" layoutX="75.0" layoutY="13.0" minHeight="0.0" minWidth="0.0" prefHeight="26.0" prefWidth="133.0" />
+                                                <TextField fx:id="tfValorAtualizado" layoutX="75.0" layoutY="49.0" prefHeight="25.0" prefWidth="74.0" />
+                                                <TextField fx:id="tfValorMaoAtualizado" layoutX="75.0" layoutY="118.0" prefHeight="25.0" prefWidth="74.0" />
+                                                <TextField fx:id="tfValorPeAtualizado" layoutX="75.0" layoutY="83.0" prefHeight="25.0" prefWidth="74.0" />
+                                                <TextField fx:id="tfQuantMaoAtualizado" layoutX="337.0" layoutY="14.0" prefHeight="25.0" prefWidth="48.0" />
+                                                <TextField fx:id="tfQuantPeAtualizado" layoutX="337.0" layoutY="49.0" prefHeight="25.0" prefWidth="47.0" />
+                                                <Label layoutX="239.0" layoutY="53.0" text="Quantidade Pé:" />
+                                                <Label layoutX="227.0" layoutY="18.0" text="Quantidade Mão:" />
+                                                <Button fx:id="btAtualizaPacote" layoutX="296.0" layoutY="115.0" mnemonicParsing="false" onAction="#onBtAtualizaPacoteAction" text="Atualizar">
+                                                   <graphic>
+                                                      <ImageView fitHeight="22.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
+                                                         <image>
+                                                            <Image url="@../../model/images/icons8_restart_96px_1.png" />
+                                                         </image>
+                                                      </ImageView>
+                                                   </graphic>
+                                                </Button>
+                                                <TextField fx:id="tfIdPacote" disable="true" editable="false" layoutX="337.0" layoutY="83.0" prefHeight="25.0" prefWidth="47.0" />
+                                                <Label layoutX="305.0" layoutY="87.0" text="ID:" />
+                                             </children>
+                                          </Pane>
+                                       </children></AnchorPane>
+                              </content>
+                            </Tab>
+                          </tabs>
+                        </TabPane>
                      </children>
                   </AnchorPane>
               </content>
@@ -94,16 +133,16 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TableView fx:id="tvPacotesAssociados" layoutX="10.0" layoutY="10.0" prefHeight="200.0" prefWidth="566.0">
+                        <TableView fx:id="tvPacotesAssociados" layoutX="10.0" layoutY="10.0" prefHeight="342.0" prefWidth="580.0">
                           <columns>
-                            <TableColumn fx:id="calunaIdCliente" prefWidth="75.0" text="ID" />
-                            <TableColumn fx:id="colunaCliente" prefWidth="153.0" text="Cliente" />
-                              <TableColumn fx:id="colunaPacoteAssociado" prefWidth="92.0" text="Pacote" />
-                              <TableColumn fx:id="colunaQuantMaoAssociado" prefWidth="134.0" text="Quantidade Mão" />
-                              <TableColumn fx:id="colunaQuantPeAssociado" prefWidth="111.0" text="Quantidade Pé" />
+                            <TableColumn fx:id="calunaIdCliente" prefWidth="56.0" text="ID" />
+                            <TableColumn fx:id="colunaCliente" prefWidth="172.0" text="Cliente" />
+                              <TableColumn fx:id="colunaPacoteAssociado" prefWidth="137.0" text="Pacote" />
+                              <TableColumn fx:id="colunaQuantMaoAssociado" prefWidth="113.0" text="Quantidade Mão" />
+                              <TableColumn fx:id="colunaQuantPeAssociado" minWidth="7.0" prefWidth="101.0" text="Quantidade Pé" />
                           </columns>
                         </TableView>
-                        <GridPane layoutX="20.0" layoutY="230.0" prefHeight="97.0" prefWidth="277.0">
+                        <GridPane layoutX="20.0" layoutY="359.0" prefHeight="97.0" prefWidth="277.0">
                           <columnConstraints>
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="133.0" minWidth="10.0" prefWidth="53.0" />
                             <ColumnConstraints hgrow="SOMETIMES" maxWidth="224.0" minWidth="10.0" prefWidth="224.0" />
@@ -119,12 +158,25 @@
                               <ChoiceBox fx:id="cbPacote" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
                            </children>
                         </GridPane>
-                        <Button layoutX="248.0" layoutY="327.0" mnemonicParsing="false" text="Adicionar" />
+                        <Button layoutX="248.0" layoutY="456.0" mnemonicParsing="false" text="Adicionar" />
                      </children>
                   </AnchorPane>
             </content>
             </Tab>
         </tabs>
       </TabPane>
+      <GridPane alignment="CENTER_RIGHT" layoutX="471.0" layoutY="458.0" prefHeight="36.0" prefWidth="202.0">
+        <columnConstraints>
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="157.0" minWidth="10.0" prefWidth="149.0" />
+          <ColumnConstraints hgrow="SOMETIMES" maxWidth="94.0" minWidth="10.0" prefWidth="51.0" />
+        </columnConstraints>
+        <rowConstraints>
+          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+        </rowConstraints>
+         <children>
+            <ProgressIndicator fx:id="piStatus" prefHeight="35.0" prefWidth="38.0" visible="false" GridPane.columnIndex="1" />
+            <Label fx:id="labelStatus" alignment="CENTER_RIGHT" prefHeight="17.0" prefWidth="147.0" text="Criando projeto!" textAlignment="RIGHT" visible="false" />
+         </children>
+      </GridPane>
    </children>
 </AnchorPane>
