--- a/src/gui/view/ViewPacote.fxml
+++ b/src/gui/view/ViewPacote.fxml
@@ -133,32 +133,53 @@
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                      <children>
-                        <TableView fx:id="tvPacotesAssociados" layoutX="10.0" layoutY="10.0" prefHeight="342.0" prefWidth="580.0">
+                        <TableView fx:id="tvPacotesAssociados" layoutX="10.0" layoutY="10.0" prefHeight="311.0" prefWidth="663.0">
                           <columns>
                             <TableColumn fx:id="calunaIdCliente" prefWidth="56.0" text="ID" />
-                            <TableColumn fx:id="colunaCliente" prefWidth="172.0" text="Cliente" />
-                              <TableColumn fx:id="colunaPacoteAssociado" prefWidth="137.0" text="Pacote" />
-                              <TableColumn fx:id="colunaQuantMaoAssociado" prefWidth="113.0" text="Quantidade Mão" />
-                              <TableColumn fx:id="colunaQuantPeAssociado" minWidth="7.0" prefWidth="101.0" text="Quantidade Pé" />
+                            <TableColumn fx:id="colunaCliente" prefWidth="270.0" text="Cliente" />
+                              <TableColumn fx:id="colunaPacoteAssociado" prefWidth="126.0" text="Pacote" />
+                              <TableColumn fx:id="colunaQuantMaoAssociado" prefWidth="107.0" text="Quantidade Mão" />
+                              <TableColumn fx:id="colunaQuantPeAssociado" minWidth="7.0" prefWidth="103.0" text="Quantidade Pé" />
                           </columns>
                         </TableView>
-                        <GridPane layoutX="20.0" layoutY="359.0" prefHeight="97.0" prefWidth="277.0">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="133.0" minWidth="10.0" prefWidth="53.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="224.0" minWidth="10.0" prefWidth="224.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
+                        <Pane layoutX="10.0" layoutY="330.0" prefHeight="135.0" prefWidth="384.0" style="-fx-border-color: #cccccc;">
                            <children>
-                              <TextField fx:id="tfCliente" GridPane.columnIndex="1" />
-                              <Label text="Cliente" />
-                              <Label text="Pacote" GridPane.rowIndex="1" />
-                              <ChoiceBox fx:id="cbPacote" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                              <GridPane layoutX="12.0" layoutY="13.0" prefHeight="72.0" prefWidth="273.0">
+                                <columnConstraints>
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="133.0" minWidth="10.0" prefWidth="53.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="224.0" minWidth="10.0" prefWidth="224.0" />
+                                </columnConstraints>
+                                <rowConstraints>
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                </rowConstraints>
+                                 <children>
+                                    <TextField fx:id="tfCliente" GridPane.columnIndex="1" />
+                                    <Label text="Cliente" />
+                                    <Label text="Pacote" GridPane.rowIndex="1" />
+                                    <ChoiceBox fx:id="cbPacote" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                 </children>
+                              </GridPane>
+                              <Button fx:id="btAddAssociacao" layoutX="196.0" layoutY="97.0" mnemonicParsing="false" onAction="#onBtCriaAssociacaoAction" text="Adicionar">
+                                 <graphic>
+                                    <ImageView fitHeight="22.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../model/images/icons8_add_96px_1.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
+                              <Button fx:id="btExcluiAssociacao" layoutX="298.0" layoutY="97.0" mnemonicParsing="false" onAction="#onBtExcluiAssociacaoAction" text="Excluir">
+                                 <graphic>
+                                    <ImageView fitHeight="22.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../model/images/icons8_trash_48px.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic>
+                              </Button>
                            </children>
-                        </GridPane>
-                        <Button layoutX="248.0" layoutY="456.0" mnemonicParsing="false" text="Adicionar" />
+                        </Pane>
                      </children>
                   </AnchorPane>
             </content>
